# git-mirror-remote

./: .dockerignore  Cargo.toml  Containerfile  Makefile  PLAN.md  README.md  compose.yaml  entrypoint.sh
src/: cache.rs  config.rs  git_backend.rs  http_server.rs  lib.rs  main.rs  ssh_server.rs
tests/: integration_test.rs  test_integration.py
