[package]
name = "git-cache-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
bytes = "1"
clap = { version = "4", features = ["derive"] }
dashmap = "6"
gix = { version = "0.70", default-features = false, features = [
    "blocking-network-client",
    "blocking-http-transport-reqwest",
] }
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
rand = "0.8"
russh = "0.48"
russh-keys = "0.48"
serde = { version = "1", features = ["derive"] }
ssh-key = { version = "0.6", features = ["ed25519", "rand_core"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
